--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -38,6 +38,63 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ACTIONS_PROD_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: Terraform Init
+        run: terraform -chdir=terraform/aws/production init
+
+      - name: Terraform Plan
+        env:
+          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+          TF_VAR_docker_image: placeholder-will-be-built-after-apply
+          TF_VAR_git_sha: ${{ github.sha }}
+          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
+          TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
+          TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+        run: terraform -chdir=terraform/aws/production plan
+
+      - name: Terraform Security Scan
+        uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          working_directory: terraform/aws/production
+
+  apply:
+    name: Terraform Apply & Deploy
+    runs-on: ubuntu-latest
+    needs: plan
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ACTIONS_PROD_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: Terraform Init
+        run: terraform -chdir=terraform/aws/production init
+
+      - name: Terraform Apply (Create ECR & Infrastructure)
+        env:
+          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+          TF_VAR_docker_image: placeholder-will-update-after-build
+          TF_VAR_git_sha: ${{ github.sha }}
+          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
+          TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
+          TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+        run: terraform -chdir=terraform/aws/production apply -auto-approve
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
@@ -58,67 +115,6 @@ jobs:
           docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
           docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-      - name: Terraform Init
-        run: terraform -chdir=terraform/aws/production init
-
-      - name: Terraform Plan
-        env:
-          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
-          TF_VAR_docker_image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-          TF_VAR_git_sha: ${{ github.sha }}
-          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-          TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
-          TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
-        run: terraform -chdir=terraform/aws/production plan
-
-      - name: Terraform Security Scan
-        uses: aquasecurity/tfsec-action@v1.0.0
-        with:
-          working_directory: terraform/aws/production
-
-  apply:
-    name: Terraform Apply
-    runs-on: ubuntu-latest
-    needs: plan
-    if: github.event_name == 'workflow_dispatch'
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ACTIONS_PROD_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-      - name: Terraform Init
-        run: terraform -chdir=terraform/aws/production init
-
-      - name: Terraform Apply
-        env:
-          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
-          TF_VAR_docker_image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-          TF_VAR_git_sha: ${{ github.sha }}
-          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-          TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
-          TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
-        run: terraform -chdir=terraform/aws/production apply -auto-approve
-
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig \
@@ -131,10 +127,13 @@ jobs:
           sudo mv kustomize /usr/local/bin/
 
       - name: Deploy to EKS with Kustomize
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           kustomize build k8s/overlays/production | \
           kubectl set image deployment/production-lornu-ai \
-            lornu-ai=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }} \
+            lornu-ai=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG \
             --filename - | \
           kubectl apply -f -
 
