--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui",
         "test:e2e:smoke": "playwright test tests/e2e/smoke-test.spec.ts --project=chromium",
+        "test:e2e:synthetic": "playwright test tests/e2e/synthetic.spec.ts",
         "dev:k8s": "kustomize build ../../k8s/overlays/dev | kubectl apply -f -"
     },
     "dependencies": {
@@ -88,9 +89,11 @@
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.5.2",
+        "@types/node": "^25.0.3",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react-swc": "^4.2.2",
+        "@vitest/coverage-v8": "^2.1.8",
         "@vitest/ui": "^2.1.8",
         "eslint": "^9.28.0",
         "eslint-plugin-react-hooks": "^5.2.0",
@@ -102,8 +105,7 @@
         "typescript-eslint": "^8.38.0",
         "vite": "^6.4.1",
         "vite-plugin-svgr": "^4.5.0",
-        "vitest": "^2.1.8",
-        "@vitest/coverage-v8": "^2.1.8"
+        "vitest": "^2.1.8"
     },
     "workspaces": {
         "packages": [
