feat(k8s): implement Phase 5 - External Secrets manifests for RDS
- Created ClusterSecretStore for AWS Secrets Manager (us-east-2)
- Created ExternalSecret to sync RDS credentials (DB_USERNAME, DB_PASSWORD, etc.)
- Created lornu-ai namespace manifest
- Updated production overlay to use lornu-ai namespace and include ESO manifests

--- a/k8s/overlays/production/kustomization.yaml
+++ b/k8s/overlays/production/kustomization.yaml
@@ -1,8 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: lornu-ai
 resources:
 - ../../base
+- ../../base/namespace.yaml
+- external-secrets/cluster-secret-store.yaml
+- external-secrets/external-secret.yaml
 namePrefix: prod-
 commonLabels:
   environment: production
