--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -14,9 +14,11 @@ permissions:
   contents: read
 
 env:
+  TF_CLOUD_ORG: ${{ secrets.TF_CLOUD_ORG }}
+  TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-  ECR_REPOSITORY: lornu-ai-staging
-  TFSEC_ENABLED: false
+  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+  TFSEC_ENABLED: true
 
 jobs:
   plan:
