--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -14,8 +14,10 @@ permissions:
   contents: read
 
 env:
+  TF_CLOUD_ORG: ${{ secrets.TF_CLOUD_ORG }}
+  TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-  ECR_REPOSITORY: lornu-ai-staging
+  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
 
 jobs:
   plan:
@@ -70,7 +72,7 @@ jobs:
           TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_route53_zone_name: ${{ secrets.ROUTE53_ZONE_NAME }}
-          TF_VAR_create_route53_zone: "false"
+          TF_VAR_create_route53_zone: "true"
           TF_VAR_cloudfront_web_acl_id: ${{ secrets.CLOUDFRONT_WAF_ACL_ID }}
         run: terraform -chdir=terraform/aws/production plan
 
@@ -117,7 +119,7 @@ jobs:
           TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_route53_zone_name: ${{ secrets.ROUTE53_ZONE_NAME }}
-          TF_VAR_create_route53_zone: "false"
+          TF_VAR_create_route53_zone: "true"
           TF_VAR_cloudfront_web_acl_id: ${{ secrets.CLOUDFRONT_WAF_ACL_ID }}
         run: terraform -chdir=terraform/aws/production apply -auto-approve
 
