Update ECR_REPOSITORY to lornu-ai-staging

--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -17,7 +17,7 @@ env:
   TF_CLOUD_ORG: ${{ secrets.TF_CLOUD_ORG }}
   TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+  ECR_REPOSITORY: lornu-ai-staging
   TFSEC_ENABLED: true
 
 jobs:
