--- a/k8s/overlays/production/kustomization.yaml
+++ b/k8s/overlays/production/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: default
 resources:
 - ../../base
+- ingress.yaml
 namePrefix: prod-
 commonLabels:
   environment: production
