--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -17,8 +17,7 @@ env:
   TF_CLOUD_ORG: ${{ secrets.TF_CLOUD_ORG }}
   TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-  ECR_REPOSITORY: lornu-ai-staging
-  TFSEC_ENABLED: false
+  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
 
 jobs:
   plan:
@@ -73,6 +72,7 @@ jobs:
           TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_route53_zone_name: ${{ secrets.ROUTE53_ZONE_NAME }}
+          TF_VAR_create_route53_zone: "true"
           TF_VAR_cloudfront_web_acl_id: ${{ secrets.CLOUDFRONT_WAF_ACL_ID }}
         run: terraform -chdir=terraform/aws/production plan
 
@@ -120,6 +120,7 @@ jobs:
           TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_route53_zone_name: ${{ secrets.ROUTE53_ZONE_NAME }}
+          TF_VAR_create_route53_zone: "true"
           TF_VAR_cloudfront_web_acl_id: ${{ secrets.CLOUDFRONT_WAF_ACL_ID }}
         run: terraform -chdir=terraform/aws/production apply -auto-approve
 
@@ -136,12 +137,18 @@ jobs:
 
       - name: Deploy to EKS with Kustomize
         run: |
+          # Get the Target Group ARN from Terraform
+          TARGET_GROUP_ARN=$(terraform -chdir=terraform/aws/production output -raw target_group_arn)
+
+          # Interpolate the ARN into the manifest
+          sed -i "s|{{TARGET_GROUP_ARN}}|$TARGET_GROUP_ARN|g" k8s/overlays/production/target-group-binding.yaml
+
           kustomize build k8s/overlays/production | \
-          kubectl set image deployment/production-lornu-ai \
+          kubectl set image deployment/prod-lornu-ai \
             lornu-ai=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }} \
             --filename - | \
           kubectl apply -f -
 
       - name: Wait for Deployment
         run: |
-          kubectl rollout status deployment/production-lornu-ai -n default --timeout=5m
+          kubectl rollout status deployment/prod-lornu-ai -n lornu-ai --timeout=5m
