--- a/k8s/overlays/production/kustomization.yaml
+++ b/k8s/overlays/production/kustomization.yaml
@@ -1,15 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: lornu-ai
 resources:
 - ../../base
-- ingress.yaml
+- target-group-binding.yaml
 namePrefix: prod-
 commonLabels:
   environment: production
 images:
 - name: lornu-ai
-  newName: 148080843892.dkr.ecr.us-east-1.amazonaws.com/lornu-ai-production
+  newName: ${{ secrets.ECR_REPOSITORY }} # Will be replaced by CI
   newTag: latest
 replicas:
 - name: prod-lornu-ai
