fix(infra): address PR review comments
- Fixed ACM validation timeouts formatting in dns.tf
- Migrated ALB listener to use locally provisioned ACM certificate
- Verified KMS key ARN usage in VPC and WAF for CloudWatch Logs
- Clarified manual safety gate in production workflow
- Updated orchestrator to support both develop and main branches

--- a/.github/workflows/terraform-orchestrator.yml
+++ b/.github/workflows/terraform-orchestrator.yml
@@ -2,11 +2,11 @@ name: "Intelligent IaC Orchestrator"
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, main ]
     paths:
       - 'terraform/aws/environments/**'
   pull_request:
-    branches: [ develop ]
+    branches: [ develop, main ]
     paths:
       - 'terraform/aws/environments/**'
 
