--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -86,6 +86,7 @@ jobs:
     name: Terraform Apply & Deploy
     runs-on: ubuntu-latest
     needs: plan
+    # Manual safety gate: only run on workflow_dispatch to prevent accidental production applies on push
     if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
