--- a/.github/workflows/terraform-orchestrator.yml
+++ b/.github/workflows/terraform-orchestrator.yml
@@ -66,7 +66,7 @@ jobs:
         id: create-run
         with:
           token: ${{ secrets.TF_API_TOKEN }}
-          organization: "lornu-ai"
+          organization: ${{ secrets.TF_CLOUD_ORG }}
           workspace: "lornu-ai-${{ matrix.workspace_suffix }}"
           plan_only: ${{ github.event_name == 'pull_request' }}
           message: "Orchestrated Apply - Lornu AI Build: ${{ github.sha }}"
