--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -86,7 +86,7 @@ jobs:
     name: Terraform Apply & Deploy
     runs-on: ubuntu-latest
     needs: plan
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && needs.plan.result == 'success')
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
 
