fix(orchestrator): upload configuration before triggering TFC runs
- Added upload-configuration step to Intelligent IaC Orchestrator
- Updated manage-workspaces.yml to support develop branch for testing
- Resolved 'Configuration version is missing' error in TFC pipeline

--- a/.github/workflows/manage-workspaces.yml
+++ b/.github/workflows/manage-workspaces.yml
@@ -2,11 +2,11 @@ name: "Meta-Infrastructure: Manage TFC Workspaces"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
     paths:
       - 'terraform/tfc-management/**'
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
     paths:
       - 'terraform/tfc-management/**'
   workflow_dispatch:
