--- a/.github/workflows/terraform-orchestrator.yml
+++ b/.github/workflows/terraform-orchestrator.yml
@@ -61,6 +61,14 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
+      - name: "Upload Configuration"
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.3.2
+        id: upload
+        with:
+          workspace: "lornu-ai-${{ matrix.workspace_suffix }}"
+          directory: "terraform/aws/environments/${{ matrix.workspace_suffix }}"
+          token: ${{ secrets.TF_API_TOKEN }}
+
       - name: "Trigger TFC Run"
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.3.2
         id: create-run
@@ -68,6 +76,7 @@ jobs:
           token: ${{ secrets.TF_API_TOKEN }}
           organization: ${{ secrets.TF_CLOUD_ORG }}
           workspace: "lornu-ai-${{ matrix.workspace_suffix }}"
+          configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
           plan_only: ${{ github.event_name == 'pull_request' }}
           message: "Orchestrated Apply - Lornu AI Build: ${{ github.sha }}"
 
