feat(kustomize): implement Epic: Plan A — Consolidated Multi-Namespace Lifecycle
- Transitioned architecture to single EKS cluster with multi-namespace isolation
- Created kubernetes/base with unified FastAPI (uv) + React (bun) manifest
- Created kubernetes/overlays for dev, staging, and prod with standardized protective metadata
- Updated terraform/aws/production to support multi-namespace Fargate profiles
- Configured lornu-ai-main TFC workspace and scope OIDC trust to kustomize branch
- Added matrix-based GitHub Actions deployment workflow for all environments

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
 - serviceaccount.yaml
 - configmap.yaml
+- configmap-assets.yaml
 - deployment.yaml
 - service.yaml
 - ingress.yaml
@@ -11,4 +12,3 @@ labels:
     app.kubernetes.io/name: lornu-ai
     app.kubernetes.io/part-of: lornu-ai
   includeSelectors: true
-
