feat(migration): implement Zero-Downtime State Refactoring (Issue #256)
- Created refactor.tf with 'moved' blocks for VPC and EKS resources
- Renamed aws_vpc.main to aws_vpc.lornu_vpc
- Renamed module.eks to module.lornu_cluster
- Updated all HCL references to use new resource names
- Added 'lornu.ai/asset-id' branding metadata to Kustomize prod overlay

--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -8,7 +8,9 @@ resources:
 namespace: lornu-prod
 
 commonLabels:
-  lornu.ai/env: production
+  lornu.ai/environment: production
+  lornu.ai/managed-by: plan-a-orchestration
+  lornu.ai/asset-id: lornu-ai-final-clear-bg
 
 patches:
 - target:
