--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -10,11 +10,6 @@ commonLabels:
   lornu.ai/environment: staging
   lornu.ai/managed-by: kustomize
 
-patches:
-- target:
-    kind: Deployment
-    name: lornu-ai
-  patch: |-
-    - op: replace
-      path: /spec/replicas
-      value: 2
+replicas:
+- name: lornu-ai
+  count: 2
