fix: address all critical code review feedback
CRITICAL FIXES:
- Add health probes (readiness/liveness) to deployment for proper K8s health management
- Fix IRSA for ALB Controller: create ServiceAccount with IAM role annotation
- Fix IRSA for External Secrets: create ServiceAccount with IAM role annotation
- Fix External Secrets namespace: change from kube-system to external-secrets (matches Fargate profile)
- Replace :latest tags with semantic version (v1.0.0) for deterministic deployments
- Use Kustomize images transformer instead of JSON patch for better maintainability
- Change base image from :latest to :dev

Note: IAM roles referenced in IRSA annotations must exist in Terraform

--- a/kubernetes/base/deployment.yaml
+++ b/kubernetes/base/deployment.yaml
@@ -17,9 +17,21 @@ spec:
       serviceAccountName: lornu-ai
       containers:
       - name: lornu-ai
-        image: lornu-ai:latest
+        image: lornu-ai:dev
         ports:
         - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
         resources:
           requests:
             cpu: "100m"
