--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -1,12 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
 - ../../base
-namePrefix: dev-
-images:
+
+namespace: lornu-dev
+
+commonLabels:
+  lornu.ai/environment: development
+  lornu.ai/managed-by: kustomize
+
+replicas:
 - name: lornu-ai
-  newName: lornu-ai
-  newTag: local
-patches:
-- path: deployment-patch.yaml
-- path: configmap-patch.yaml
+  count: 1
