fix: address critical code review feedback from Gemini Code Assist
Fixes two critical issues identified in code review:

1. KMS Key References (PR #264 fix)
   - terraform/aws/production/vpc.tf: aws_kms_key.cloudwatch.arn → .id
   - terraform/aws/production/waf.tf: aws_kms_key.cloudwatch.arn → .id
   - Reason: CloudWatch Logs API requires key ID, not ARN

2. Certificate ARN Placement (PR #262 fix)
   - Removed placeholder certificate ARN from base ingress.yaml
   - Created k8s/overlays/prod/ingress-patch.yaml for environment-specific cert
   - Added ingress patch reference to prod/kustomization.yaml
   - Reason: Base configs must be environment-agnostic; ACM cert is prod-specific

Validation: terraform validate ✓ passes
Pattern: Matches existing staging overlay pattern (ingress-patch.yaml)

--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -24,6 +24,10 @@ configMapGenerator:
 
 # Patch for production-specific settings
 patches:
+  - path: ingress-patch.yaml
+    target:
+      kind: Ingress
+      name: lornu-ai
   - patch: |-
       apiVersion: apps/v1
       kind: Deployment
