fix: add missing alb_domain_name variable to terraform plan step
The precondition validation in cdn.tf now requires alb_domain_name to be set
during terraform plan. This variable is needed for the CloudFront origin domain
fallback when the Kubernetes Ingress status is not yet populated.

In GitHub Actions CI, the Ingress data source cannot be populated because the
Kubernetes cluster is not running during plan execution. Therefore, we must
provide TF_VAR_alb_domain_name via GitHub Secrets.

⚠️  PREREQUISITE: Add GitHub Secret
  Name: PROD_ALB_DOMAIN_NAME
  Value: The DNS name of the production ALB (e.g., k8s-prod-lornu-xxx.elb.us-east-1.amazonaws.com)

Without this secret, terraform plan will fail with:
  'ALB origin domain is not available. Either wait for ALB Controller to provision
   the ALB and populate Ingress status, or explicitly set var.alb_domain_name...'

--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -74,6 +74,7 @@ jobs:
           TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
           TF_VAR_route53_zone_name: ${{ secrets.ROUTE53_ZONE_NAME }}
           TF_VAR_cloudfront_web_acl_id: ${{ secrets.CLOUDFRONT_WAF_ACL_ID }}
+          TF_VAR_alb_domain_name: ${{ secrets.PROD_ALB_DOMAIN_NAME }}
         run: terraform -chdir=terraform/aws/production plan
 
       - name: Terraform Security Scan
