refactor: rename TF_API_TOKEN to GCP_TF_API_TOKEN
- Avoids conflicts with AWS workflows
- Makes it clear this token is for GCP infrastructure
- Updated workflow and documentation

--- a/.github/workflows/terraform-gcp.yml
+++ b/.github/workflows/terraform-gcp.yml
@@ -41,7 +41,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.GCP_TF_API_TOKEN }}
 
       - name: Terraform Format Check
         id: fmt
