--- a/.github/workflows/terraform-gcp.yml
+++ b/.github/workflows/terraform-gcp.yml
@@ -61,6 +61,7 @@ jobs:
         run: terraform -chdir=terraform/gcp plan -no-color
         env:
           TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
         continue-on-error: true
 
       - name: Comment PR with Plan
@@ -104,3 +105,4 @@ jobs:
         run: terraform -chdir=terraform/gcp apply -auto-approve
         env:
           TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
