docs: add Service Account User role and fix .gitignore for terraform
- Added roles/iam.serviceAccountUser to GCP_IAM_ROLES.md
- Updated .gitignore to exclude .terraform directory
- Running terraform fmt and validate before push

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,11 @@ wrangler.toml
 apps/web/worker.ts
 .wrangler/
 .dev.vars
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+.terraform.tfstate.lock.info
+*.tfvars
+*.tfvars.json
