--- a/k8s/overlays/lornu-dev/patches/resources.yaml
+++ b/k8s/overlays/lornu-dev/patches/resources.yaml
@@ -10,8 +10,8 @@ spec:
       - name: lornu-ai
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
+            cpu: 100m
+            memory: 128Mi
           limits:
-            memory: "256Mi"
-            cpu: "250m"
+            cpu: 200m
+            memory: 256Mi
