fix(ci): add push trigger to registration workflow
This will force GitHub to register the workflow so it appears in the Actions tab.

--- a/.github/workflows/gcp-sa-setup.yml
+++ b/.github/workflows/gcp-sa-setup.yml
@@ -1,6 +1,11 @@
 name: GCP Terraform Service Account Setup
 
 on:
+  push:
+    branches:
+      - gcp-develop
+    paths:
+      - '.github/workflows/gcp-sa-setup.yml'
   workflow_dispatch:
     inputs:
       action:
