fix(ci): pass required variables to terraform import

--- a/.github/workflows/gcp-sa-setup.yml
+++ b/.github/workflows/gcp-sa-setup.yml
@@ -56,6 +56,9 @@ jobs:
         if: github.event.inputs.action == 'import_sa'
         run: |
           terraform -chdir=terraform/gcp import google_service_account.terraform_provisioner projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ github.event.inputs.sa_email }}
+        env:
+          TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
 
       - name: Output Service Account Key
         if: github.event.inputs.action == 'output_key'
