fix: address gemini code review feedback on PR #252
Fixes identified issues:

1. Docker Image Tag Inconsistency:
   - Dev overlay now uses 'lornu-ai:local' instead of 'lornu-ai:latest'
   - Aligns with local development using podman/minikube

2. Kubernetes Label Standardization:
   - Base manifests now use standard labels (app.kubernetes.io/name, app.kubernetes.io/part-of)
   - Removed redundant 'app: lornu-ai' labels from deployment.yaml
   - Updated service.yaml selector to match standardized labels
   - Removed duplicate label definitions from base kustomization.yaml
   - All overlays properly apply environment-specific labels via commonLabels

3. Consistent Reference Paths:
   - Already addressed via PR #287 (kubernetes/ vs k8s/)

This ensures:
- Cleaner, DRY label definitions
- Consistency with Kubernetes naming conventions
- Proper overlay composition without duplication

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -20,4 +20,4 @@ patches:
       value: 1
     - op: replace
       path: /spec/template/spec/containers/0/image
-      value: lornu-ai:latest
+      value: lornu-ai:local
