--- a/.github/workflows/gcp-sa-setup.yml
+++ b/.github/workflows/gcp-sa-setup.yml
@@ -55,7 +55,12 @@ jobs:
       - name: Import Service Account
         if: github.event.inputs.action == 'import_sa'
         run: |
+          # Unset env vars that cause Terraform to complain about undeclared variables
+          unset TF_VAR_project_id
+          unset GCP_PROJECT_ID
           terraform -chdir=terraform/gcp import -var="project_id=${{ secrets.GCP_PROJECT_ID }}" google_service_account.terraform_provisioner projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ github.event.inputs.sa_email }}
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
 
       - name: Output Service Account Key
         if: github.event.inputs.action == 'output_key'
