--- a/.github/workflows/gcp-sa-setup.yml
+++ b/.github/workflows/gcp-sa-setup.yml
@@ -52,11 +52,24 @@ jobs:
       - name: Terraform Init
         run: terraform -chdir=terraform/gcp init
 
+      - name: Cleanup Environment
+        run: |
+          echo "Clearing conflicting environment variables..."
+          # Unset all TF_VAR_, GCP_, and GOOGLE_ variables from the environment
+          while IFS='=' read -r name value; do
+            if [[ $name =~ ^(TF_VAR_|GCP_|GOOGLE_) ]]; then
+              echo "Unsetting $name"
+              unset "$name"
+            fi
+          done < <(env)
+          # Also try direct unsets for known problematic ones
+          unset TF_VAR_project_id
+          unset GOOGLE_CREDENTIALS
+          unset GCP_PROJECT_ID
+
       - name: Import Service Account
         if: github.event.inputs.action == 'import_sa'
         run: |
-          # Aggressively clear any environment variables that Terraform might pick up
-          unset $(env | grep -E '^TF_VAR_|^GCP_|^GOOGLE_' | cut -d= -f1)
           terraform -chdir=terraform/gcp import -var="project_id=${{ secrets.GCP_PROJECT_ID }}" google_service_account.terraform_provisioner projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ github.event.inputs.sa_email }}
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
