--- a/.github/workflows/gcp-sa-setup.yml
+++ b/.github/workflows/gcp-sa-setup.yml
@@ -55,11 +55,13 @@ jobs:
       - name: Import Service Account
         if: github.event.inputs.action == 'import_sa'
         run: |
-          # Use env -i to run in a completely clean environment
-          # We only pass through the PATH and the manual -var flag
-          env -i PATH="$PATH" GOOGLE_CREDENTIALS="${{ secrets.GCP_CREDENTIALS_JSON }}" \
-            terraform -chdir=terraform/gcp import -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
-            google_service_account.terraform_provisioner projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ github.event.inputs.sa_email }}
+          # Unset internal variables that Terraform Cloud tries to map to undeclared TF variables
+          unset TF_VAR_project_id
+          unset GOOGLE_CREDENTIALS
+          unset GCP_PROJECT_ID
+          terraform -chdir=terraform/gcp import -var="project_id=${{ secrets.GCP_PROJECT_ID }}" google_service_account.terraform_provisioner projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ github.event.inputs.sa_email }}
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
 
       - name: Output Service Account Key
         if: github.event.inputs.action == 'output_key'
