--- a/.github/workflows/gcp-sa-setup.yml
+++ b/.github/workflows/gcp-sa-setup.yml
@@ -55,10 +55,12 @@ jobs:
       - name: Import Service Account
         if: github.event.inputs.action == 'import_sa'
         run: |
-          # Unset internal variables that Terraform Cloud tries to map to undeclared TF variables
-          unset TF_VAR_project_id
-          unset GOOGLE_CREDENTIALS
-          unset GCP_PROJECT_ID
+          # Exhaustively clear variables that Terraform Cloud tries to map
+          # We unset everything that looks like a TF or GCP variable
+          for var in $(env | grep -E '^(TF_VAR_|GCP_|GOOGLE_|CLOUDSDK_)' | cut -d= -f1); do
+            echo "Unsetting $var"
+            unset "$var"
+          done
           terraform -chdir=terraform/gcp import -var="project_id=${{ secrets.GCP_PROJECT_ID }}" google_service_account.terraform_provisioner projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ github.event.inputs.sa_email }}
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS_JSON }}
