--- a/k8s/overlays/staging/kustomization.yaml
+++ b/k8s/overlays/staging/kustomization.yaml
@@ -1,11 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: lornu-stage
 resources:
 - ../../base
+- namespace.yaml
 namePrefix: staging-
 commonLabels:
   environment: staging
+  app.kubernetes.io/name: lornu-ai
+  lornu.ai/environment: staging
+  lornu.ai/managed-by: terraform-cloud
+  lornu.ai/asset-id: lornu-ai-final-clear-bg
 images:
 - name: lornu-ai
   newName: 148080843892.dkr.ecr.us-east-1.amazonaws.com/lornu-ai-staging
