--- a/.github/workflows/terraform-gcp.yml
+++ b/.github/workflows/terraform-gcp.yml
@@ -66,8 +66,9 @@ jobs:
         continue-on-error: true
 
       - name: Comment PR with Plan
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && github.event.pull_request.number
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -94,12 +95,15 @@ jobs:
 
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`;
 
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.name,
-              body: output
-            })
+            const prNumber = context.issue?.number || ${{ github.event.pull_request.number || 0 }};
+            if (prNumber) {
+              github.rest.issues.createComment({
+                issue_number: prNumber,
+                owner: context.repo.owner,
+                repo: context.repo.name,
+                body: output
+              });
+            }
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/gcp-develop' && github.event_name == 'push'
