--- a/kubernetes/overlays/staging/namespace.yaml
+++ b/kubernetes/overlays/staging/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: lornu-stage
+  name: lornu-staging
   labels:
     app.kubernetes.io/name: lornu-ai
     lornu.ai/environment: staging
