fix(PR #257): resolve TFC organization, workspace, namespace, module references, and asset ID
- Changed TFC organization from 'disposable-org' to 'lornu-ai' (Plan A standard)
- Updated TFC workspace from 'lornu-ai' to 'aws-kustomize' (matches kustomize branch setup)
- Fixed Ingress namespace from 'default' to 'lornu-prod' (matches deployment namespace)
- Updated module reference from 'module.eks' to 'module.lornu_cluster' (Plan A naming convention)
- Changed asset ID label from 'lornu-ai-final-clear-bg' (filename) to 'lornu-ai-production-app' (semantic)

All changes ensure consistency with Plan A architecture and zero-downtime state refactoring.

--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -10,7 +10,7 @@ namespace: lornu-prod
 commonLabels:
   lornu.ai/environment: production
   lornu.ai/managed-by: plan-a-orchestration
-  lornu.ai/asset-id: lornu-ai-final-clear-bg
+  lornu.ai/asset-id: lornu-ai-production-app
 
 patches:
 - target:
