fix(k8s): replace deprecated commonLabels with labels format in kustomization overlays
- Updated kubernetes/overlays/staging/kustomization.yaml: commonLabels → labels
- Updated kubernetes/overlays/prod/kustomization.yaml: commonLabels → labels
- Aligns with kustomize best practices and eliminates deprecation warning
- Matches format already used in kubernetes/base/kustomization.yaml

--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -7,8 +7,10 @@ resources:
 
 namespace: lornu-staging
 
-commonLabels:
-  lornu.ai/env: staging
+labels:
+- pairs:
+    lornu.ai/env: staging
+  includeSelectors: true
 
 patches:
 - target:
