--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -7,10 +7,12 @@ resources:
 
 namespace: lornu-prod
 
-commonLabels:
-  lornu.ai/environment: production
-  lornu.ai/managed-by: plan-a-orchestration
-  lornu.ai/asset-id: lornu-ai-production-app
+labels:
+- pairs:
+    lornu.ai/environment: production
+    lornu.ai/managed-by: plan-a-orchestration
+    lornu.ai/asset-id: lornu-ai-production-app
+  includeSelectors: true
 
 patches:
 - target:
