--- a/.github/workflows/kustomize-deploy.yml
+++ b/.github/workflows/kustomize-deploy.yml
@@ -14,6 +14,7 @@ jobs:
   deploy:
     name: "Deploy Environments"
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     strategy:
       matrix:
         env: [dev, staging, prod]
