feat: add cert-manager with Let's Encrypt ACME for automatic TLS provisioning
Add native Kubernetes manifests for cert-manager v1.13.2 (no Helm):
- ClusterIssuer resources for Let's Encrypt (staging and production)
- Deployment for cert-manager controller and webhook
- RBAC configuration (ServiceAccount, ClusterRole, ClusterRoleBinding)
- Service for webhook
- IRSA-based AWS credentials for Route53 DNS01 validation

Updates:
- Kustomize overlay for production includes cert-manager resources
- Ingress patched to add cert-manager.io annotations
- TLS configuration with automatic certificate provisioning

The cert-manager will:
1. Watch for Ingress resources with cert-manager.io/cluster-issuer annotation
2. Create Certificate resources that request certs from Let's Encrypt
3. Validate domain ownership via Route53 DNS01 challenge
4. Store certificates in Kubernetes Secrets
5. Auto-renew certificates before expiration

Ref: https://github.com/lornu-ai/lornu-ai/issues/245 (Plan A)

--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
 - ../../base
 - namespace.yaml
+- cert-manager
 
 namespace: lornu-prod
 
@@ -18,3 +19,20 @@ patches:
     - op: replace
       path: /spec/replicas
       value: 3
+- target:
+    kind: Ingress
+    name: lornu-ai
+  patch: |-
+    - op: add
+      path: /metadata/annotations/cert-manager.io~1cluster-issuer
+      value: letsencrypt-prod
+    - op: add
+      path: /metadata/annotations/cert-manager.io~1certificate-name
+      value: lornu-ai-tls
+    - op: add
+      path: /spec/tls
+      value:
+      - hosts:
+        - example.com
+        - api.example.com
+        secretName: lornu-ai-tls
